# nova-skill

./: .env.example  .gitignore  README.md  cli.py  dag.md  fix_httpx.py  loop_if.md  main.py  pyproject.toml  requirements.txt  temp.md  test.py
.github/workflows/: ci.yml
skills/coder/: SKILL.md
skills/data_analyst/: SKILL.md
skills/mut_los/: SKILL.md
src/: __init__.py  tools.py
src/agent/: __init__.py  agent.py
src/core/: __init__.py  types.py
src/display/: __init__.py  progress.py  rich_ui.py
src/nova/: __init__.py  agent.py  skill.py  tools.py
src/skills/: __init__.py  registry.py
src/tasks/: __init__.py  manager.py  planner.py
src/tools/: __init__.py  files.py  gateway.py  network.py  skills.py  system.py  tasks.py  time.py
tests/: test_agent.py  test_gateway_comprehensive.py  test_progress_display.py  test_skill.py  test_task_manager.py  test_tools.py  test_types.py
