[project]
name = "nova-skill"
version = "0.1.0"
description = "轻量级 Skill + Tool 框架"
requires-python = ">=3.10"

dependencies = [
    # LangChain 生态 - 最新稳定版
    "langchain>=0.3.0",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.50",
    
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    
    # 工具
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    
    # 日志
    "loguru>=0.7.2",
    
    # 环境变量
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-system"

[tool.ruff]
line-length = 100
target-version = "py310"
