[project]
name = "nova-skill"
version = "0.1.0"
description = "轻量级 Skill + Tool 框架"
requires-python = ">=3.10"

dependencies = [
    # LangChain ecosystem - latest stable
    "langchain>=0.3.0",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.50",
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    # Tools
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    # Logging
    "loguru>=0.7.2",
    # Environment variables
    "python-dotenv>=1.0.0",
    "ddgs>=8.1.1",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nova"]

[tool.uv]
python-preference = "only-system"

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
